Внесение изменений в Actor